Added managed by salt. Removed UseParNewGC